--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             isCheating = false;
             timer = setTimeout(function () {
                 isCheating = true;
-            }, 400);
+            }, 400); // 按住超过400ms，才标记为作弊
         }
 
         function handleEnd() {
