--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
         var products = JSON.parse(localStorage.getItem('products')) || [...initialProducts];
 
         let isCheating = false;
-        let timer;
 
         function _ajax(callback) {
             setTimeout(function () {
@@ -146,40 +145,33 @@
             location.reload();
         });
 
-        // 按住按钮 400ms 才触发
+        // 处理鼠标和触摸事件
+        const lotteryHandler = document.getElementById('lottery-handler');
+
+        // 按下鼠标或触摸，不做任何操作
         function handleStart(event) {
             // 阻止触摸事件的默认行为
             if (event.type === 'touchstart') {
                 event.preventDefault(); // 阻止默认行为，避免长按触发其他浏览器事件
             }
-
-            // 重置 isCheating，按下后触发的 400ms 延迟
-            isCheating = false;
-            timer = setTimeout(function () {
-                isCheating = true;
-            }, 400); // 按住超过 400 毫秒才触发
         }
 
+        // 松开鼠标或手指时触发抽奖
         function handleEnd() {
-            // 如果 400 毫秒内松开，清除定时器
-            clearTimeout(timer);
-            if (isCheating) {
-                console.log("触发抽奖");
-            } else {
-                console.log("取消抽奖");
-            }
+            // 在松开时才触发抽奖
+            console.log("触发抽奖");
         }
 
-        // 处理鼠标事件和触摸事件
-        const lotteryHandler = document.getElementById('lottery-handler');
-
-        // 鼠标按下和触摸开始事件
+        // 监听鼠标按下和触摸开始事件，不做操作
+        lotteryHandler.addEventListener('mousedown', handleStart);
         lotteryHandler.addEventListener('touchstart', handleStart);
 
-        // 鼠标抬起和触摸结束事件
+        // 监听鼠标松开和触摸结束事件，触发抽奖
+        lotteryHandler.addEventListener('mouseup', handleEnd);
         lotteryHandler.addEventListener('touchend', handleEnd);
 
-        // 鼠标离开和触摸取消事件
+        // 监听鼠标离开和触摸取消事件，取消触发
+        lotteryHandler.addEventListener('mouseleave', handleEnd);
         lotteryHandler.addEventListener('touchcancel', handleEnd);
 
     </script>
